# axum-blog

./: .env.dev  Cargo.toml  Justfile  README.md  compose.dev.yaml  rustfmt.toml  todo.md
migrations/: 20231008133508_create_post_table.sql  20231025222512_create_immutable_concat_function.sql  20231025222513_create_user_table.sql  20231025222514_add_registered_at.sql
src/: main.rs
src/application/posts/: mod.rs
src/domain/: error.rs  mod.rs  pagination.rs  persistence.rs  validation.rs
src/domain/auth/: user_repository.rs
src/domain/posts/: mod.rs  post_repository.rs
src/domain/serde/: mod.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: mod.rs
src/infrastructure/misc/: mod.rs
src/infrastructure/posts/: mod.rs  persistent_post_repository.rs
