[package]
name = "axum-blog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.73"
axum = { version = "0.6.20", features = ["macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
rust-i18n = { version = "2.2.1", default-features = false, features = ["anyhow", "rust-i18n-extract", "quote", "itertools"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["uuid", "chrono", "runtime-tokio", "postgres", "tls-native-tls"] }
tokio = { version = "1.32.0", features = ["full"] }
uuid = { version = "1.4.1", features = ["v7", "serde", "std"] }
